# grumble

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conan-install.py  conan_glm_glm.xcconfig  conan_nlohmann_json_nlohmann_json_release_arm64.xcconfig  conanbuild.sh  conanbuildenv-debug-armv8.sh  conanbuildenv-release-armv8.sh  conanbuildinfo.txt  conanbuildinfo.xcconfig  conanfile.py  conanfile.txt  conaninfo.txt  conanrun.sh  conanrunenv-debug-armv8.sh  conanrunenv-release-armv8.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  gbuild  graph_info.json
conan/: conan_glm_glm_release_arm64.xcconfig  conan_nlohmann_json_nlohmann_json.xcconfig  conanbuild.sh  conanbuildenv-debug-armv8.sh  conanbuildenv-release-armv8.sh  conandeps.xcconfig  conanrun.sh  conanrunenv-debug-armv8.sh  conanrunenv-release-armv8.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh
grumble/: grumble.cpp  grumble.hpp  grumblePriv.hpp
grumble.xcodeproj/: project.pbxproj
grumble/anim/: AnimationCurves.hpp  Animator.cpp  Animator.hpp  ViewAnimator.cpp  ViewAnimator.hpp
grumble/animation/: AnimationCurves.cpp  AnimationCurves.hpp  Animator.cpp  Animator.hpp  ViewAnimator.cpp  ViewAnimator.hpp
grumble/base/: Game.cpp  Game.hpp  Object.cpp  Object.hpp
grumble/core/: Game.cpp  Game.hpp  Object.cpp  Object.hpp
grumble/font/: Font.cpp  Font.hpp  FontCharacter.cpp  FontCharacter.hpp  FontManager.cpp  FontManager.hpp  FontManagerConfiguration.hpp
grumble/input/: Responder.cpp  Responder.hpp  Touch.hpp
grumble/io/: FileHandler.hpp  FileManager.cpp  FileManager.hpp  FileManagerConfiguration.hpp  ImageFile.cpp  ImageFile.hpp
grumble/logging/: LogCategory.hpp  LogLevel.hpp  Logger.cpp  Logger.hpp  MemoryProfiler.cpp
grumble/message/: Message.cpp  Message.hpp  MessageManager.cpp  MessageManager.hpp
grumble/render/: Graphics.cpp  Graphics.hpp  ImageRenderer.cpp  ImageRenderer.hpp  RenderMethod.hpp  Renderer.cpp  Renderer.hpp  RendererManager.cpp  RendererManager.hpp  ShaderHandler.hpp  ShaderManager.cpp  ShaderManager.hpp  Shapes.hpp  Sprite.cpp  Sprite.hpp  SpriteHandler.hpp  SpriteManager.cpp  SpriteManager.hpp  (+2 more)
include/: grumble.hpp
(+147 files in other folders)
